// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowLeft keyDown 1`] = `
.emotion-0 {
  left: calc(0% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(0% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-12"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="0"
      role="slider"
      selectedvalue="0"
      tabindex="1"
    >
      <div
        class="slider__label"
        data-testid="slider__label"
        id="slider__label"
      >
        0
      </div>
    </div>
    <a
      class="slider__step emotion-1"
      data-testid="slider__step--0"
    />
    <a
      class="slider__step emotion-2"
      data-testid="slider__step--10"
    />
    <a
      class="slider__step emotion-3"
      data-testid="slider__step--20"
    />
    <a
      class="slider__step emotion-4"
      data-testid="slider__step--30"
    />
    <a
      class="slider__step emotion-5"
      data-testid="slider__step--40"
    />
    <a
      class="slider__step emotion-6"
      data-testid="slider__step--50"
    />
    <a
      class="slider__step emotion-7"
      data-testid="slider__step--60"
    />
    <a
      class="slider__step emotion-8"
      data-testid="slider__step--70"
    />
    <a
      class="slider__step emotion-9"
      data-testid="slider__step--80"
    />
    <a
      class="slider__step emotion-10"
      data-testid="slider__step--90"
    />
    <a
      class="slider__step emotion-11"
      data-testid="slider__step--100"
    />
  </div>
</div>
`;

exports[`ArrowRight keyDown 1`] = `
.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(10% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(10% - 8px);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-12"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="10"
      aria-valuetext="10"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="10"
      role="slider"
      selectedvalue="10"
      tabindex="1"
    >
      <div
        class="slider__label"
        data-testid="slider__label"
        id="slider__label"
      >
        10
      </div>
    </div>
    <a
      class="slider__step emotion-1"
      data-testid="slider__step--0"
    />
    <a
      class="slider__step emotion-2"
      data-testid="slider__step--10"
    />
    <a
      class="slider__step emotion-3"
      data-testid="slider__step--20"
    />
    <a
      class="slider__step emotion-4"
      data-testid="slider__step--30"
    />
    <a
      class="slider__step emotion-5"
      data-testid="slider__step--40"
    />
    <a
      class="slider__step emotion-6"
      data-testid="slider__step--50"
    />
    <a
      class="slider__step emotion-7"
      data-testid="slider__step--60"
    />
    <a
      class="slider__step emotion-8"
      data-testid="slider__step--70"
    />
    <a
      class="slider__step emotion-9"
      data-testid="slider__step--80"
    />
    <a
      class="slider__step emotion-10"
      data-testid="slider__step--90"
    />
    <a
      class="slider__step emotion-11"
      data-testid="slider__step--100"
    />
  </div>
</div>
`;

exports[`click - hasVisibleSteps 1`] = `
.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(-10% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(-10% - 8px);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-12"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="-10"
      role="slider"
      tabindex="1"
    >
      <div
        class="slider__label"
        data-testid="slider__label"
        id="slider__label"
      />
    </div>
    <a
      class="slider__step emotion-1"
      data-testid="slider__step--0"
    />
    <a
      class="slider__step emotion-2"
      data-testid="slider__step--10"
    />
    <a
      class="slider__step emotion-3"
      data-testid="slider__step--20"
    />
    <a
      class="slider__step emotion-4"
      data-testid="slider__step--30"
    />
    <a
      class="slider__step emotion-5"
      data-testid="slider__step--40"
    />
    <a
      class="slider__step emotion-6"
      data-testid="slider__step--50"
    />
    <a
      class="slider__step emotion-7"
      data-testid="slider__step--60"
    />
    <a
      class="slider__step emotion-8"
      data-testid="slider__step--70"
    />
    <a
      class="slider__step emotion-9"
      data-testid="slider__step--80"
    />
    <a
      class="slider__step emotion-10"
      data-testid="slider__step--90"
    />
    <a
      class="slider__step emotion-11"
      data-testid="slider__step--100"
    />
  </div>
</div>
`;

exports[`snapshot - defaults 1`] = `
.emotion-0 {
  left: calc(0% - 8px);
}

.emotion-0 {
  left: calc(0% - 8px);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-1"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="-100"
      aria-valuenow="-100"
      aria-valuetext="-100"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="-100"
      position="0"
      role="slider"
      selectedvalue="-100"
      tabindex="1"
    />
  </div>
</div>
`;

exports[`snapshot - disabled 1`] = `
.emotion-0 {
  left: calc(0% - 8px);
}

.emotion-0 {
  left: calc(0% - 8px);
}

<div>
  <div
    aria-disabled="true"
    aria-labelledby="slider__label"
    aria-readonly="true"
    class="slider emotion-1"
    disabled=""
    role="slider"
  >
    <div
      aria-disabled="true"
      aria-orientation="horizontal"
      aria-readonly="true"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      disabled=""
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="0"
      role="slider"
      selectedvalue="0"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`snapshot - hasVisibleSteps 1`] = `
.emotion-0 {
  left: calc(100% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

.emotion-0 {
  left: calc(100% - 8px);
}

.emotion-1 {
  left: calc(0%);
}

.emotion-2 {
  left: calc(10%);
}

.emotion-3 {
  left: calc(20%);
}

.emotion-4 {
  left: calc(30%);
}

.emotion-5 {
  left: calc(40%);
}

.emotion-6 {
  left: calc(50%);
}

.emotion-7 {
  left: calc(60%);
}

.emotion-8 {
  left: calc(70%);
}

.emotion-9 {
  left: calc(80%);
}

.emotion-10 {
  left: calc(90%);
}

.emotion-11 {
  left: calc(100%);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-12"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="100"
      role="slider"
      selectedvalue="100"
      tabindex="1"
    />
    <a
      class="slider__step emotion-1"
      data-testid="slider__step--0"
    />
    <a
      class="slider__step emotion-2"
      data-testid="slider__step--10"
    />
    <a
      class="slider__step emotion-3"
      data-testid="slider__step--20"
    />
    <a
      class="slider__step emotion-4"
      data-testid="slider__step--30"
    />
    <a
      class="slider__step emotion-5"
      data-testid="slider__step--40"
    />
    <a
      class="slider__step emotion-6"
      data-testid="slider__step--50"
    />
    <a
      class="slider__step emotion-7"
      data-testid="slider__step--60"
    />
    <a
      class="slider__step emotion-8"
      data-testid="slider__step--70"
    />
    <a
      class="slider__step emotion-9"
      data-testid="slider__step--80"
    />
    <a
      class="slider__step emotion-10"
      data-testid="slider__step--90"
    />
    <a
      class="slider__step emotion-11"
      data-testid="slider__step--100"
    />
  </div>
</div>
`;

exports[`snapshot - labeled 1`] = `
.emotion-0 {
  left: calc(100% - 8px);
}

.emotion-0 {
  left: calc(100% - 8px);
}

<div>
  <div
    aria-labelledby="slider__label"
    class="slider emotion-1"
    role="slider"
  >
    <div
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100"
      class="slider__thumb emotion-0"
      data-testid="slider__thumb"
      focusstyle="[object Object]"
      max="100"
      min="0"
      position="100"
      role="slider"
      selectedvalue="100"
      tabindex="1"
    >
      <div
        class="slider__label"
        data-testid="slider__label"
        id="slider__label"
      >
        100
      </div>
    </div>
  </div>
</div>
`;
